--- a/src/main/resources/configuration.vm
+++ b/src/main/resources/configuration.vm
@@ -22,16 +22,16 @@
                 <input type="text" id="rgroup" name="rgroup" class="text">
             </div>
             <div class="field-group">
-                <label for="name">Outadted Interval:</label>
+                <label for="name">Period for Outdated Pages(hours):</label>
                 <input type="number" min="1" id="timeframe" name="timeframe" class="text">
             </div>
 
             <div class="field-group">
                 <input type="submit" value="Save" class="button">
             </div>
-
-            <p> </p>
-
+            <br>
+            <br>
+            <br>
             <div class="view">
                 <label for="name">Affected Space Keys:</label>
                 <div class="field-value">
@@ -52,6 +52,14 @@
                     $!timeframe
                 </div>
             </div>
+
+            <div class="Info">
+                <br>
+                <strong>Configuration:</strong> visit Administration - Scheduled Jobs in order to set time interval for running job<br>
+                <strong>Default schedule:</strong> each day at 00:00:00<br>
+                <strong>Job:</strong> Ping Job<br>
+            </div>
+
         </form>
     </body>
 </html>
