--- a/src/main/resources/configuration.vm
+++ b/src/main/resources/configuration.vm
@@ -1,26 +1,30 @@
 <html>
     <head>
         <title>Old Pages Review Service Configuration</title>
+        <meta charset="UTF-8"/>
         <meta name="decorator" content="atl.admin">
     </head>
     <body>
         <form id="admin" class="aui" action="" method="POST">
+
             <div class="field-group">
-                <label for="name">Add space key to be monitored:</label>
-                <input type="text" id="spacekey" name="spacekey" class="text">
+                <label for="name">Select space key to be monitored:</label>
+                <select class="multi-select" multiple="multiple" size="8" name="allSpaceKeys" id="allSpaceKeys">
+                        #foreach($space in $allSpaceKeys)
+                            <option value=$space>
+                        #end
+                    </select>
             </div>
+
             <div class="field-group">
-                <label for="name">Remove space from the monitoring:</label>
-                <input type="text" id="rspacekey" name="rspacekey" class="text">
+                <label for="name">Select affected groups:</label>
+                <select class="multi-select" multiple="multiple" size="8" name="allGroups" id="allGroups">
+                    #foreach($group in $allGroups)
+                        <option value="$issueType.get('name')">
+                    #end
+                </select>
             </div>
-            <div class="field-group">
-                <label for="name">Add affected user group:</label>
-                <input type="text" id="group" name="group" class="text">
-            </div>
-            <div class="field-group">
-                <label for="name">Remove affected user group:</label>
-                <input type="text" id="rgroup" name="rgroup" class="text">
-            </div>
+
             <div class="field-group">
                 <label for="name">Period to consider pages as outdated (day(s)):</label>
                 <input type="number" min="1" id="timeframe" name="timeframe" class="text">
