--- a/src/main/resources/configuration.vm
+++ b/src/main/resources/configuration.vm
@@ -8,7 +8,7 @@
         <form id="admin" class="aui" action="" method="POST">
             <div class="field-group">
                 <label for="allSpaceKeys">Select space keys to be monitored:</label>
-                <select class="multi-select" multiple="multiple" size="8" id="allSpaceKeys">
+                <select class="multi-select" multiple="multiple" size="8" id="monitoredSpaceKeys">
                         #foreach($spaceKey in $allSpaceKeys)
                             <option value="$spaceKey"
                                 #if ($affectedSpaces.contains($spaceKey)) selected #end>$spaceKey</option>
@@ -17,10 +17,10 @@
             </div>
             <div class="field-group">
                 <label for="allGroups">Select affected groups:</label>
-                <select class="multi-select" multiple="multiple" size="8" id="allGroups">
+                <select class="multi-select" multiple="multiple" size="8" id="affectedGroups">
                     #foreach($group in $allGroups)
-                        <option value="$group.get('name')"
-                            #if ($affectedGroups.contains($group)) selected #end>$group</option>>
+                        <option value="$group.getName()"
+                            #if ($affectedGroups.contains($group.getName())) selected #end>$group.getName()</option>
                     #end
                 </select>
             </div>
