--- a/src/main/resources/configuration.vm
+++ b/src/main/resources/configuration.vm
@@ -5,11 +5,11 @@
         <meta name="decorator" content="atl.admin">
     </head>
     <body>
+    <h5>Job Input</h5>
         <form id="admin" class="aui" action="" method="POST">
-
-            <div class="field-group">
-                <label for="monitoredSpaceKeys">Select space keys to be monitored:</label>
-                    <select class="multi-select" multiple="multiple" size="8" id="monitoredSpaceKeys">
+            <div class="field-group-ps">
+                <label for="monitoredSpaceKeys">Select space keys to be monitored:
+                    <select class="multi-select" multiple="multiple" size="8" id="monitoredSpaceKeys"></label>
                             #foreach($spaceKey in $allSpaceKeys)
                                 <option value="$spaceKey"
                                     #if ($affectedSpaces.contains($spaceKey)) selected #end>$spaceKey</option>
@@ -17,14 +17,14 @@
                     </select>
             </div>
 
-            <div class="field-group">
+            <div class="field-group-ps">
                 <label for="affectedGroups">Select affected groups:</label>
-                <select class="multi-select" multiple="multiple" size="8" id="affectedGroups">
-                    #foreach($group in $allGroups)
-                        <option value="$group.getName()"
-                            #if ($affectedGroups.contains($group.getName())) selected #end>$group.getName()</option>
-                    #end
-                </select>
+                    <select class="multi-select" multiple="multiple" size="8" id="affectedGroups">
+                        #foreach($group in $allGroups)
+                            <option value="$group.getName()"
+                                #if ($affectedGroups.contains($group.getName())) selected #end>$group.getName()</option>
+                        #end
+                    </select>
             </div>
 
             <div>
@@ -32,15 +32,26 @@
                     <input type="number" min="0" id="timeframe" class="text" value="$!timeframe">
                 </label>
             </div>
-
-            <br>
-            <div class="btn">
-                <input type="submit" value="Save" class="button" id="save-button">
+            <h5>Mail Content</h5>
+            <div class="field-group-sb">
+                <label for="name">Subject:</label>
+                <input type="text" id="mail-sbj"  class="text">
             </div>
-
+            <form class="aui"
+                <fieldset>
+                    <div class="field-group" id="mail-body">
+                        <label for="textarea-id">Mail Body:</label>
+                        <textarea class="textarea" id="textarea-id" placeholder="Your mail body here..."></textarea>
+                    </div>
+                </fieldset>
+            </form>
+        <br>
+            <div class="btn">
+                <button class="aui-button" id="save-button">Save</button>
+            </div>
         </form>
+        <h5>Info</h5>
             <div class="Info">
-                <br>
                 <strong>Configuration:</strong> visit Administration - Scheduled Jobs in order to set time interval for running job or to run it manually<br>
                 <strong>Default schedule:</strong> each day at 00:00:00<br>
                 <strong>Job:</strong> Old Pages Review Job<br>
