--- a/src/main/resources/css/ping-service.css
+++ b/src/main/resources/css/ping-service.css
@@ -11,7 +11,7 @@
    padding: 4px 0 4px 80px;
 }
 #mail-sbj {
-   margin-left: 28px;
+   margin-left: 12px;
    width: 350px;
    max-width: 350px;
 }
@@ -23,3 +23,12 @@
 #message-info-ps {
    width: 750px;
 }
+#required-subj{
+   left: 0;
+   position: sticky;
+   top: 0;
+}
+.mail-buttons-ps {
+   padding-left: 190px;
+}
+
