Multiple label fix

--- a/src/main/resources/configuration.vm
+++ b/src/main/resources/configuration.vm
@@ -72,7 +72,7 @@
         <div class="aui-message aui-message-info" id="message-info-ps">
                 <strong>Configuration:</strong> visit Administration - Scheduled Jobs in order to set time interval for running job or to run it manually<br>
                 <strong>Default schedule:</strong> each day at 00:00:00<br>
-                <strong>Please pay attention to the following bug:</strong> <a href="https://jira.atlassian.com/browse/CONFSERVER-55455">CONFSERVER-55455</a><br>
+                <strong>Please pay attention to the following bug related to scheduled jobs settings: </strong> <a href="https://jira.atlassian.com/browse/CONFSERVER-55455">CONFSERVER-55455</a><br>
                 <strong>Job:</strong> Old Pages Review Job<br>
                 <strong>Available variables for mail body:</strong> $creator, $days, $links<br>
         </div>
